--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+packages/backend/controllers/uploads/miller_paezdelaossa.pdf
+
+packages/backend/controllers/uploads/Ruth_RivasGonzlez_714427876.pdf
